# Obsidian-Launcher

./: CMakeLists.txt  LauncherConfig.cs  Obsidian Launcher.csproj  Obsidian Launcher.sln  ObsidianLauncher.cs  Program.cs  Progress.md  README.md
Enums/: ArchitectureType.cs  MinecraftJarType.cs  OperatingSystemType.cs  RuleAction.cs
Models/: ArgumentRuleCondition.cs  AssetIndex.cs  AssetIndexDetails.cs  AssetObjectInfo.cs  ClientLoggingInfo.cs  ConditionalArgumentValue.cs  DownloadDetails.cs  ForgeFile.cs  ForgeVersionInfo.cs  Instance.cs  JavaRuntimeInfo.cs  JavaVersionInfo.cs  Library.cs  LibraryArtifact.cs  LibraryDownloads.cs  LibraryExtractRule.cs  LoggingFile.cs  MinecraftVersion.cs  OperatingSystemInfo.cs  Rule.cs  VersionArgument.cs  VersionArguments.cs  VersionLogging.cs  VersionManifest.cs  VersionMetadata.cs
Models/InstallProfiles/: ForgeInstallProfile.cs
Services/: ArgumentBuilder.cs  AssetManager.cs  ForgeMetadataService.cs  GameLauncher.cs  HttpManager.cs  HttpManagerService.cs  InstanceManager.cs  JavaDownloader.cs  JavaDownloaderService.cs  JavaManager.cs  JavaManagerService.cs  LibraryManager.cs
Services/Installers/: ForgeInstaller.cs  IModLoaderInstaller.cs
Utils/: CryptoUtils.cs  FolderLinker.cs  LogHelper.cs  LoggerSetup.cs  OSUtil.cs
include/: miniz_cpp.hpp
include/Launcher/: Config.hpp  Http.hpp  HttpManager.hpp  JavaDownloader.hpp  JavaManager.hpp
include/Launcher/Types/: AssetIndex.hpp  JavaVersion.hpp  Library.hpp  MinecraftJAR.hpp  OS.hpp  Rule.hpp  Version.hpp  VersionArguments.hpp  VersionLogging.hpp  VersionMeta.hpp
include/Launcher/Utils/: Crypto.hpp  Logger.hpp  OS.hpp  ZipFile.hpp
src/: AssetIndex.cpp  Crypto.cpp  Http.cpp  HttpManager.cpp  JavaDownloader.cpp  JavaManager.cpp  JavaVersion.cpp  Library.cpp  MinecraftJAR.cpp  OSUtil.cpp  OperatingSystem.cpp  Rule.cpp  Version.cpp  VersionArguments.cpp  VersionLogging.cpp  VersionMeta.cpp  main.cpp
src/Utils/: Logger.cpp  ZipFile.cpp
tests/: SSL-Debug.cpp
